--- a/mars.html
+++ b/mars.html
@@ -44,7 +44,7 @@
 
 
 
-    <td valign = "top"><IMG src="./IMG/marsimages/Mars.jpg" align="left" width="150" hspace="20" vspace="10" alt="Марс">
+    <td valign = "top"><IMG src="https://sophiamelnik.github.io/IMG/marsImages/Mars.jpg" align="left" width="150" hspace="20" vspace="10" alt="Марс">
 
     <IMG src="./IMG/marsimages/ландшафт Марса.jpg" align="right" width="150" hspace="20" vspace="10" alt="ландшафт Марса">
 
