--- a/mars.html
+++ b/mars.html
@@ -46,7 +46,7 @@
 
     <td valign = "top"><IMG src="https://sophiamelnik.github.io/IMG/marsImages/Mars.jpg" align="left" width="150" hspace="20" vspace="10" alt="Марс">
 
-    <IMG src="./IMG/marsimages/ландшафт Марса.jpg" align="right" width="150" hspace="20" vspace="10" alt="ландшафт Марса">
+    <IMG src="https://sophiamelnik.github.io/IMG/marsImages/%D0%BB%D0%B0%D0%BD%D0%B4%D1%88%D0%B0%D1%84%D1%82%20%D0%9C%D0%B0%D1%80%D1%81%D0%B0.jpg" align="right" width="150" hspace="20" vspace="10" alt="ландшафт Марса">
 
     <p>
         Марс був богом війни у стародавніх римлян. Відстань його від Сонця — 227,7 млн. кілометрів.
@@ -79,8 +79,8 @@
         Один з каньйонів Марса такий довгий, що міг би перетнути в довжину територію США.
     </p>
 
-    <IMG src="./IMG/marsimages/Марс та Місяць.jpg" align="right" width="150" hspace="20" vspace="10" alt="Марс та Місяць">
-    <IMG src="./IMG/marsimages/abtract.jpg" align="left" width="200" hspace="20" vspace="10" alt="abtract">
+    <IMG src="https://sophiamelnik.github.io/IMG/marsImages/%D0%9C%D0%B0%D1%80%D1%81%20%D1%82%D0%B0%20%D0%9C%D1%96%D1%81%D1%8F%D1%86%D1%8C.jpg" align="right" width="150" hspace="20" vspace="10" alt="Марс та Місяць">
+    <IMG src="https://sophiamelnik.github.io/IMG/marsImages/abtract.jpg" align="left" width="200" hspace="20" vspace="10" alt="abtract">
 
     <p>
         На Марсі один з найбільших вулканів Сонячної системи — вулкан Олімп. 
