--- a/mercury.html
+++ b/mercury.html
@@ -44,7 +44,7 @@
 
     
 
-    <td valign = "top"><IMG src="./IMG/mercuryimages/merkurij.jpg" align="left" width="150" hspace="35" vspace="30" alt="Меркурій">
+    <td valign = "top"><IMG src="https://sophiamelnik.github.io/IMG/mercuryImages/merkurij.jpg" align="left" width="150" hspace="35" vspace="30" alt="Меркурій">
 
 
     <p> 
